# free-join

./: .gitignore  Makefile  README.md  plot.html
data/: .gitignore  r.parquet
data/imdb/: Makefile  import.sh  import.sql
duckdb/: .gitignore  b.csv  c.csv  config.txt  profile.patch  run_all.ddb  s.parquet  s3.json  s4.html  s4.json  t.parquet  triangle-plan.json  triangle-scan.json  triangle.json  triangle.sql
figs/degrees/: create_histogram.py  create_histograms.sh  create_queries.py  create_tables.sh  join_attributes.csv
gj/: Cargo.toml  bad.json  clone.txt  full.txt  good.json  imdb.json  linear.txt  missing.json  out.snap  out.txt  profile.json  temp.txt  time  time.txt
gj/src/: join.rs  lib.rs  main.rs  sql.rs  triangle.drawio  trie.rs  util.rs
logs/: out.snap  profile.txt  robustness.html  time.txt
logs/scan-profiles/: 10a.json  12a.json  12c.json  13a.json  13c.json  14a.json  14c.json  15b.json  15c.json  15d.json  16a.json  16b.json  16c.json  17b.json  17c.json  17d.json  19b.json  19c.json  19d.json  1a.json  1b.json  1c.json  20c.json  21a.json  21b.json  22b.json  23a.json  23b.json  23c.json  25b.json  25c.json  26c.json  27a.json  29b.json  2b.json  2d.json  30b.json  30c.json  31b.json  (+20 more)
preprocessor/: Cargo.toml  profile.sh  run.sh  test.sh
scripts/: export.sql  gen_star.py  imdb.py  import.sh  import.sql  plot.py  profile.sh  profile.sql  q13.sql  robust.py  transform.sql
taco/: convert.py  convert.sh  gj-algo.md  imdb.py  sql2cq.md
tensor_preprocessor/: Cargo.toml  run.sh  test.sh
translator/: .gitignore  Cargo.toml  README.md
(+330 files in other folders)
