[package]
edition = "2021"
name = "gj"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.20", features = ["derive"]}
derivative = "2.2.0"
either = "1"
env_logger = {version = "0.9.0", default-features = false}
hashbrown = "0.12"
indexmap = "1.9"
log = "0.4.17"
once_cell = "1"
parquet = "18.0"
rustc-hash = "1.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
smallvec = "1.9.0"

[profile.release]
debug = true

[profile.release-final]
codegen-units = 1
debug = false
inherits = "release"
lto = "fat"
